# ollama-chat

./: .gitignore  project.readme.md
jupyterlab-ai-assistant/: IMPLEMENTATION_PLAN.md  README.md  TEST_README.md  install.sh  package.json  pyproject.toml  setup.py
jupyterlab-ai-assistant/jupyterlab_ai_assistant/: __init__.py  _version.py  config.py  handlers.py  ollama_client.py
jupyterlab-ai-assistant/schema/: plugin.json
jupyterlab-ai-assistant/src/: index.tsx
jupyterlab-ai-assistant/src/components/: CellToolbarButton.tsx  ChatMessage.tsx  ChatWidget.tsx  ModelSelector.tsx
jupyterlab-ai-assistant/src/services/: ollama.ts
jupyterlab-ai-assistant/style/: ChatWidget.css  index.css
