[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_ai_assistant/labextension/static/style.js"]
ensured-targets = ["jupyterlab_ai_assistant/labextension/static/style.js", "jupyterlab_ai_assistant/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_ai_assistant/labextension/**", "yarn.lock", ".*", "package-lock.json"]

[tool.pytest.ini_options]
testpaths = ["jupyterlab_ai_assistant/tests"]
